# backend/swagger.json
@@ -394,10 +394,13 @@
                 "displayName": {
                   "example": "any"
                 },
-                "bio": {
+                "favoriteGenres": {
                   "example": "any"
                 },
-                "favoriteGenres": {
+                "isCritic": {
+                  "example": "any"
+                },
+                "bio": {
                   "example": "any"
                 },
                 "avatarImageUrl": {
@@ -408,17 +411,17 @@
                 },
                 "joinedDate": {
                   "example": "any"
-                },
-                "isCritic": {
-                  "example": "any"
                 }
               }
             }
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -485,10 +488,13 @@
                 "displayName": {
                   "example": "any"
                 },
-                "bio": {
+                "favoriteGenres": {
                   "example": "any"
                 },
-                "favoriteGenres": {
+                "isCritic": {
+                  "example": "any"
+                },
+                "bio": {
                   "example": "any"
                 },
                 "avatarImageUrl": {
@@ -499,17 +505,17 @@
                 },
                 "joinedDate": {
                   "example": "any"
-                },
-                "isCritic": {
-                  "example": "any"
                 }
               }
             }
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
